--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ twitter_username: C1200Games
 github_username:  C1200
 
 # Build settings
-theme: jekyll-theme-cayman
+theme: jekyll-theme-hacker
 plugins:
   - jekyll-feed
 
@@ -50,3 +50,5 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+permalink: /:categories/:year-:month-:day-:title:output_ext
