--- a/_config.yml
+++ b/_config.yml
@@ -52,3 +52,7 @@ plugins:
 #   - vendor/ruby/
 
 permalink: /:categories/:year-:month-:day-:title:output_ext
+
+paginate: 5
+
+paginate_path: "/blog/paginate/:num"
